# weather-bot

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  cmake.sh
docs/: HEADER.txt
docs/.vscode.samples/: extensions.json  launch.json  settings.json
src/c/: main.c  user_input.c  user_input.h  weatherrs_lib.h
src/rust/: weather.rs
test/: CMakeLists.txt
test/src/c/: main.cpp  user_input_tests.cc  user_input_tests.h
